# vwu-forms

./: Dockerfile  alembic.ini  main.py  pyproject.toml
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_initial_registrationform.py  0002_add_ias_course.py  b30927c3ca2d_auto_migration.py
