[project]
name = "forms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.7",
    "alembic>=1.12.0"
]
